FIX PARAGRAPH COMPENSATION CLIPPING

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -51,7 +51,7 @@ h4 {
 }
 
 p {
-	margin: -0.6em 0;
+	margin: -0.45em 0;
 	line-height: 2em;
 }
 
